bugFix deleted flex-wrap in social icons dropbox section

--- a/assets/css/style-mobile.less
+++ b/assets/css/style-mobile.less
@@ -647,7 +647,6 @@ svg {
 
     &__social {
         display: flex;
-        flex-wrap: wrap;
         align-items: center;
     }
 }
